add message with results

--- a/src/config.ini
+++ b/src/config.ini
@@ -17,7 +17,7 @@ DB_USER = root
 DB_PASSWORD = root
 DB_DUMPS = /dumps/mysql
 
-
+;Las siguiente configuraciones aún no estan disponibles para ser implementadas
 ;[POSTGRES]
 ;DB_HOST = db_host_postgres
 ;DB_PORT = db_port_postgres
